CON-28 Document UI methods - UI method documentation - method "getIpAddressesFromActiveTests()" declaration in the interface ConnTestService (review from PL #17) - fixed table flickering - create a method to change the text color to red when the ping time is -1

--- a/src/main/resources/css/comboboxstyle.css
+++ b/src/main/resources/css/comboboxstyle.css
@@ -1,4 +1,5 @@
 combo-box-base{
+    -fx-background: transparent;
     -fx-background-color: #ffffffc8;
     -fx-border-color: transparent;
 }
@@ -6,6 +7,7 @@ combo-box-base{
 .combo-box-base:focused{
     -fx-background-color: #ffffffc8;
     -fx-text-fill: #333333;
+    -fx-border-color: transparent;
 }
 
 .combo-box-base:showing{
